openshift/service.yaml
apiVersion: v1
kind: Service

metadata:

  name: openshift-service

  namespace: openshift-enterprise-platform

spec:

  selector:
    app: openshift-app

  ports:

  - protocol: TCP

    port: 80

    targetPort: 8080
